[FIX] web_editor: snippet modal’s dark mode background
This commit aims to fix two issues with the snippet modal in dark mode:
1. Streamline the background color accross browsers. Chrome takes into
account the classes on the iframe for the background color but Firefox
and Safari don't.
2. The text below the custom snippets is always black, regardless of the
color scheme selected.

These 2 issues are fixed by using the color-scheme cookie value inside
the snippet modal's iframe, adding as a meta tag and a custom class.

task-5095262

X-original-commit: a0c7717c4be9264e1e2cad7c0a022b6d35ee3dbb

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -3065,4 +3065,10 @@ we-select.o_grid we-toggler {
             }
         }
     }
+
+    &.o_add_snippets_preview--dark {
+        .o_snippets_preview_row .o_custom_snippet_wrap .o_custom_snippet_edit > * {
+            color: $white;
+        }
+    }
 }
